[package]
name = "feditest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
axum = { version = "0.6.20", features = ["http2", "ws", "macros"] }
axum-tungstenite = "0.3.0"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-tungstenite = "0.20.1"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tungstenite = "0.20.1"
